Prevent breadcrumb from overlapping with AddThis block

--- a/css/kolding.css
+++ b/css/kolding.css
@@ -209,7 +209,7 @@ body #account-profile .cart a {
 	background: transparent;
 }
 #path{
-	padding:10px 0 0 200px;
+	padding:10px 260px 0 200px;
 	margin:0;
 }
 #pagefooter {
